# blockchain-voting_2021_extracted

./: .gitignore  README.md
blockchain/dit-blockchain-private-source/: Cargo.toml
blockchain/dit-blockchain-private-source/services/actual-ballots-service/: Cargo.toml  build.rs
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/: errors.rs  lib.rs  service.rs
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/api/: actual_ballot_by_index.rs  actual_ballot_by_store_tx_hash.rs  actual_ballots_amount.rs  actual_ballots_hashes.rs  copied_ballots_amount.rs  encrypted_group_ids.rs  grouped_tx_hashes_amount.rs  mod.rs  voting_results.rs
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/enums/: mod.rs
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/proto/: config.proto  enums.proto  mod.rs  schema.proto  service.proto  transactions.proto
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/proto/variants/: ballot_status.proto
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/schema/: actual_ballots_storage.rs  mod.rs  service_config.rs
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/transactions/: create_actual_ballots_storage.rs  mod.rs  resolve_group_ids.rs  store_actual_ballots.rs  store_grouped_tx_hash.rs  tally_results.rs
blockchain/dit-blockchain-private-source/services/actual-ballots-service/src/variants/: ballot_status.rs  mod.rs
blockchain/dit-blockchain-private-source/src/: main.rs
blockchain/dit-blockchain-source/: Cargo.toml
blockchain/dit-blockchain-source/services/votings-service/: Cargo.toml
blockchain/dit-blockchain-source/services/votings-service/src/: errors.rs  lib.rs  service.rs
blockchain/dit-blockchain-source/services/votings-service/src/api/: ballot_by_index.rs  ballot_by_sid.rs  ballot_by_store_tx_hash.rs  ballots_by_store_tx_hashes.rs  ballots_config.rs  crypto_system_settings.rs  decryption_statistics.rs  invalid_ballots.rs  issued_ballots_amount.rs  mod.rs  registered_voters_amount.rs  revote_enabled.rs  stored_ballots_amount.rs  stored_ballots_amount_by_district.rs  voter_info.rs  voting_results.rs  voting_state.rs
blockchain/dit-blockchain-source/services/votings-service/src/enums/: mod.rs
blockchain/dit-blockchain-source/services/votings-service/src/proto/: config.proto  enums.proto  mod.rs  schema.proto  service.proto  transactions.proto
blockchain/dit-blockchain-source/services/votings-service/src/proto/variants/: ballot_status.proto
blockchain/dit-blockchain-source/services/votings-service/src/schema/: ballots_storage.rs  mod.rs  service_config.rs  voters_registry.rs  voting.rs  votings_registry.rs
blockchain/dit-blockchain-source/services/votings-service/src/transactions/: add_voter_key.rs  create_voting.rs  decrypt_ballot.rs  finalize_voting.rs  finalize_voting_with_results.rs  issue_ballot.rs  mod.rs  publish_decrypted_ballot.rs  publish_decryption_key.rs  register_voters.rs  revoke_voter_participation.rs  stop_registration.rs  stop_voting.rs  store_ballot.rs
blockchain/dit-blockchain-source/services/votings-service/src/types/: big_uint_wrapper.rs  mod.rs  sealed_box_nonce_wrapper.rs  sealed_box_public_key_wrapper.rs  sealed_box_secret_key_wrapper.rs
blockchain/dit-blockchain-source/services/votings-service/src/util/: mod.rs
blockchain/dit-blockchain-source/src/: main.rs
blockchain/frontend-library-source/blockchain-connector/: index.js  (+1 more)
blockchain/key-generator-source/: Cargo.toml
(+484 files in other folders)
