[package]
name = "dit-voting-blockchain"
version = "1.0.0"
authors = []
edition = "2018"


[dependencies]
anyhow = "1.0.26"

exonum = "1.0.0"
exonum-cli = "1.0.0"
exonum-crypto = "1.0.0"
exonum-derive = "1.0.0"
exonum-merkledb = "1.0.0"
exonum-proto = "1.0.0"
exonum-rust-runtime = "1.0.0"
exonum-supervisor = "1.0.0"
exonum_sodiumoxide = "0.0.24"

chrono = { version = "= 0.4.29" }

hex = "0.3.2"

protobuf = "=3.3.0"

dit-votings-service = { path = "./services/votings-service" }

[dependencies.tokio] 
version = "1"
features = ["io-util", "macros", "rt-multi-thread", "signal", "net", "time"]

[profile.release]
lto = true

[patch.crates-io]
exonum = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-cli = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-crypto = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-derive = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-merkledb = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-proto = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-rust-runtime = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-supervisor = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
exonum-build = { git = "https://github.com/PeterZhizhin/exonum", branch = "fix_build" }
