[package]
name = "dit-votings-service"
version = "1.0.0"
authors = []
edition = "2018"

[dependencies]
anyhow = "1.0.26"

exonum = "1.0.0"
exonum-cli = "1.0.0"
exonum-crypto = "1.0.0"
exonum-derive = "1.0.0"
exonum-merkledb = "1.0.0"
exonum-proto = "1.0.0"
exonum-rust-runtime = "1.0.0"
exonum-supervisor = "1.0.0"
exonum_sodiumoxide = "0.0.24"

hex = "0.3.2"
num-bigint = { version = "0.2", features = ["rand", "serde"] }
num-traits = "0.2"
protobuf = "=3.3.0"
serde = "1.0.10"
serde_derive = "1.0.10"
serde_json = "1.0.2"
serde_repr = "0.1.6"
toml = "0.5"

[build-dependencies]
exonum-build = "1.0.0"

[features]
default = ["with-serde"]
with-serde = []

[patch.crates-io]
exonum = { path = "/home/peter/projects/exonum/exonum" }
exonum-cli = { path = "/home/peter/projects/exonum/cli" }
exonum-crypto = { path = "/home/peter/projects/exonum/components/crypto" }
exonum-derive = { path = "/home/peter/projects/exonum/components/derive" }
exonum-merkledb = { path = "/home/peter/projects/exonum/components/merkledb" }
exonum-proto = { path = "/home/peter/projects/exonum/components/proto" }
exonum-rust-runtime = { path = "/home/peter/projects/exonum/runtimes/rust" }
exonum-supervisor = { path = "/home/peter/projects/exonum/services/supervisor" }
